--- a/calendar.html
+++ b/calendar.html
@@ -34,17 +34,19 @@
   </head>
 
   <body>
+  <!-- Orange Line -->
+    <div class="top-line"></div>
     <!-- Top Bar -->
       <div id="tfheader">
         <div class="container-fluid">
           <div class="row">
             <!-- Title -->
             <div class="title-wrap">
-              <a href="./index.html" class="title-text">SDScene</a>
+              <a href="./index.html" class="title-text">SD<span class="title2">Scene</span></a>
             </div>
             <!-- HTML for SEARCH BAR -->
             <form id="tfnewsearch" method="get" action="https://www.google.com/search">
-                <input type="text" id="tfq" class="tftextinput2" name="q" size="21" maxlength="120" value=""><input type="submit" value=">" class="tfbutton2">
+                <input type="text" id="tfq" class="tftextinput2" name="q" size="21" maxlength="120" value="Search..."><input type="submit" value=">" class="tfbutton2">
             </form>
             <div class="tfclear"></div>
           </div>
@@ -53,7 +55,7 @@
       <!-- End Top Bar -->
 
 
-    <div class="container-fluid">
+    <div  id="wrap" class="container-fluid">
       <!-- Static navbar -->
       <div class="row">
         <nav class="navbar navbar-default" role="navigation">
@@ -136,6 +138,7 @@
           </div>
         </div><!--/.sidebar-offcanvas-->
       </div><!--/row-->
+      <div id="push"></div>
     </div><!--/.container-->
     <!-- Footer -->
     <footer class="footer">
