--- a/artist_3rd.html
+++ b/artist_3rd.html
@@ -8,7 +8,7 @@
   <meta name="author" content="">
   <link rel="icon" href="../../favicon.ico">
 
-  <title>SDScene - Artists</title>
+  <title>SDScene - Bowen</title>
 
   <!-- Bootstrap core CSS -->
   <link href="./css/bootstrap.min.css" rel="stylesheet">
