--- a/news.html
+++ b/news.html
@@ -39,24 +39,26 @@
   </head>
 
   <body>
+  <!-- Orange Line -->
+    <div class="top-line"></div>
     <!-- Top Bar -->
     <div id="tfheader">
       <div class="container-fluid">
         <div class="row">
           <!-- Title -->
           <div class="title-wrap">
-            <a href="./index.html" class="title-text">SDScene</a>
+            <a href="./index.html" class="title-text">SD<span class="title2">Scene</span></a>
           </div>
           <!-- HTML for SEARCH BAR -->
           <form id="tfnewsearch" method="get" action="https://www.google.com/search">
-              <input type="text" id="tfq" class="tftextinput2" name="q" size="21" maxlength="120" value=""><input type="submit" value=">" class="tfbutton2">
+              <input type="text" id="tfq" class="tftextinput2" name="q" size="21" maxlength="120" value="Search..."><input type="submit" value=">" class="tfbutton2">
           </form>
           <div class="tfclear"></div>
         </div>
       </div>
     </div>
     <!-- End top bar -->
-      <div class="container-fluid">
+      <div  id="wrap" class="container-fluid">
           <!-- Static navbar -->
           <div class="row">
             <nav class="navbar navbar-default" role="navigation">
@@ -81,7 +83,165 @@
               <a href="#" class="active">News</a>
             </div>
           </div>
-      <!-- End Breadcrumbs -->
+          <!-- End Breadcrumbs -->
+
+          <!-- Start Top Row -->
+          <div class="row">
+            <!-- Carousel -->
+            <div class= "col-md-9 small-carousel">
+              <div id="myCarousel" class="carousel slide" data-interval="4000" data-ride="carousel">
+                <!-- Carousel indicators -->
+                <ol class="carousel-indicators">
+                  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                  <li data-target="#myCarousel" data-slide-to="1"></li>
+                  <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol>   
+                <!-- Carousel items -->
+                <div class="carousel-inner">
+                  <div class="active item">
+                    <img src="./images/ryan.png" alt="">
+                    <div class="carousel-caption">
+                      <h3>Ryan Adams and Jenny Lewis</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <img src="./images/mystic.jpg" alt="">
+                    <div class="carousel-caption">
+                      <h3>Mystic Braves</h3>
+                      <p>Aliquam sit amet gravida nibh, facilisis gravida odio.</p>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <img src="./images/francisco.jpg" alt="">
+                    <div class="carousel-caption">
+                      <h3>Francisco the Man</h3>
+                      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                    </div>
+                  </div>
+                </div> <!-- End Carousel items -->
+                <!-- Carousel nav -->
+                <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+                <a class="carousel-control right" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
+              </div>
+            </div>
+            <!-- End Carousel -->
+            <!-- Spotlight -->
+            <div class="col-md-3 spotlight featured-news">
+              <!-- Title -->
+              <div>
+                <h3 class="spotlight-title">Featured News<span class="glyphicon glyphicon-pushpin spotlight-glyp" aria-hidden="true"></span></h3>
+              </div>
+              <img class="spotlight-image" src="http://lorempixel.com/200/150" alt="">
+              <p>Starting on January 11th, The Decemberists broke onto the scene. Frontman Jimmy Whales paired with Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam unde numquam eius, a optio placeat doloremque assumenda expedita, ipsa itaque dolores dicta repellat consectetur pariatur tenetur neque illum. Debitis, recusandae.</p>
+               <a href="#test3">Read more...</a>
+            </div>
+            <!-- End Spotlight -->
+          </div>
+          <!-- End Top Row -->
+          
+          <!-- Start news row -->
+          <div class="row ">
+            <h2 class="content-title">Top News</h2>
+            <a href="#test1" class="clickable-div">
+              <div class="col-md-3 top-event top-news">
+                <img src="http://lorempixel.com/200/100" alt="">
+                <p class="content-header news-header">The Killers</p>
+                <p class="content-subline">Decemeber 11th</p>
+              </div>
+            </a>
+            <a href="#test1" class="clickable-div">
+              <div class="col-md-3 top-event top-news">        
+                <img src="http://lorempixel.com/200/100" alt="">
+                <p class="content-header news-header">The Killers</p>
+                <p class="content-subline">Decemeber 11th</p>
+                <p class="news-paragraph content-line">Lorem ipsum dolor sit amet, consectetur adipisicing elit. liquam natus.</p>
+              </div>
+            </a>
+            <a href="#test1" class="clickable-div">
+              <div class="col-md-3 top-event top-news">
+                <img src="http://lorempixel.com/200/100" alt="">
+                <p class="content-header news-header">The Killers</p>
+                <p class="content-subline">Decemeber 11th</p>
+              </div>
+            </a>
+            <a href="#test1" class="clickable-div">
+              <div class="col-md-3 top-event top-news">
+                <img src="http://lorempixel.com/200/100" alt="">
+                <p class="content-header news-header">The Killers</p>
+                <p class="content-subline">Decemeber 11th</p>
+              </div>
+            </a>
+          </div>    
+          <!-- End news row -->
+          <hr/>
+          <!-- Start news row -->
+          <div class="row "> 
+            <h2 class="content-title">More News</h2> 
+            <!-- Left Column  -->
+            <!-- Line 1 -->
+            <div class="col-md-6">
+              <a href="#test1" class="clickable-div">
+                <div class="row news-line">
+                  <div class="col-md-2">
+                    <img src="http://lorempixel.com/70/70" alt="">
+                  </div>                      
+                  <div class="col-md-10 news-text">
+                    <p class="content-header news-header">The Killers</p>
+                    <p class="content-subline">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit quasi provident, saepe repudiandae magnam sed accusamus.</p>
+                  </div>
+                </div>
+              </a>
+                
+              <!-- Line 2 -->
+              <a href="#test1" class="clickable-div">
+                <div class="row news-line">
+                  <div class="col-md-2">
+                    <img src="http://lorempixel.com/70/70" alt="">
+                  </div>                      
+                  <div class="col-md-10 news-text">
+                    <p class="content-header news-header">The Killers</p>
+                    <p class="content-subline">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque suscipit.</p>
+                  </div>
+                </div>
+              </a>
+            </div>
+
+            <!-- Right Column -->
+            <div class="col-md-6">
+              <!-- Line 1 -->
+              <a href="#test1" class="clickable-div">
+                <div class="row news-line">
+                    <div class="col-md-2">
+                      <img src="http://lorempixel.com/70/70" alt="">
+                    </div>                      
+                    <div class="col-md-10 news-text">
+                      <p class="content-header news-header">The Killers</p>
+                      <p class="content-subline">@ The Melting Pot</p>
+                    </div>
+                  </div>
+                </a>
+                <!-- Line 2 -->
+                <a href="#test1" class="clickable-div">
+                  <div class="row news-line">
+                    <div class="col-md-2">
+                      <img src="http://lorempixel.com/70/70" alt="">
+                    </div>                      
+                    <div class="col-md-10 news-text">
+                      <p class="content-header news-header">The Killers</p>
+                      <p class="content-subline">@ The Melting Pot</p>
+                    </div>
+                  </div>
+                </a>
+            </div>        
+          </div>    
+          <!-- End news row -->
+
+          <div id="push"></div>
       </div>
 
     <!-- Footer -->
