--- a/events.html
+++ b/events.html
@@ -90,32 +90,32 @@
       <!-- Start Top Events -->
       <div class="row top-events-row">
         <!-- <div class="home-category"><h2 class="content-title">Top Events</h2></div>  -->       
-        <a href="#test1" class="clickable-div">
+        <a href="./events_mike.html" class="clickable-div">
           <div class="col-md-3 top-event">
-            <img src="http://lorempixel.com/200/100" alt="">
-            <p class="content-header">The Killers</p>
-            <p class="content-subline">Decemeber 11th</p>
+            <img class="events-photos2" src="./images/events_dj_mike.jpg" alt="">
+            <p class="content-header">DJ Mike Czech</p>
+            <p class="content-subline">Decemeber 13th, 2014</p>
           </div>
         </a>
-        <a href="#test1" class="clickable-div">
+        <a href="./events_douglas.html" class="clickable-div">
           <div class="col-md-3 top-event">        
-            <img src="http://lorempixel.com/200/100" alt="">
-            <p class="content-header">The Killers</p>
-            <p class="content-subline">Decemeber 11th</p>
+            <img class="events-photos2" src="./images/events_douglas.JPG" alt="">
+            <p class="content-header">Douglas Kvandal &amp; Live Jazz Quartet</p>
+            <p class="content-subline">Decemeber 13th, 2014</p>
           </div>
         </a>
-        <a href="#test1" class="clickable-div">
+        <a href="./events_matt.html" class="clickable-div">
           <div class="col-md-3 top-event">
-            <img src="http://lorempixel.com/200/100" alt="">
-            <p class="content-header">The Killers</p>
-            <p class="content-subline">Decemeber 11th</p>
+            <img class="events-photos2" src="./images/events_matt.jpg" alt="">
+            <p class="content-header">Matt Smith Neu Jazz Trio</p>
+            <p class="content-subline">Decemeber 14th, 2014</p>
           </div>
         </a>
-        <a href="#test1" class="clickable-div">
+        <a href="./events_sharam.html" class="clickable-div">
           <div class="col-md-3 top-event">
-            <img src="http://lorempixel.com/200/100" alt="">
-            <p class="content-header">The Killers</p>
-            <p class="content-subline">Decemeber 11th</p>
+            <img class="events-photos2" src="./images/events_sharam.jpg" alt="">
+            <p class="content-header">Sunday Social with Sharam</p>
+            <p class="content-subline">Decemeber 14th, 2014</p>
           </div>
         </a>
       </div>    
@@ -146,17 +146,17 @@
                     <div class="container-fluid event-listing">
                       <div class="row">
                         <div class="col-md-1">
-                          <img src="http://lorempixel.com/50/50" alt="">
+                          <img class="events-photos" src="./images/events_organized.jpg" alt="">
                         </div>                      
                         <div class="col-md-10 event-info">
-                          <p class="content-header">The Killers</p>
-                          <p class="content-subline">@ The Melting Pot</p>
+                          <p class="content-header">Organized Grime</p>
+                          <p class="content-subline">@ Air Conditioned Lounge</p>
                         </div>
                         <div class="col-md-1 listing-date">
                           <div class="listing-date-top">
                             <p>Monday</p>
                           </div>
-                          <p>12/7</p>
+                          <p>12/15</p>
                         </div>
                       </div>
                     </div>                    
@@ -171,6 +171,7 @@
                         </div>                      
                         <div class="col-md-10">
                           <p class="content-line">A great concert line-up for all of the jazz fans.</p>
+                          <!-- <a href="./events_organized.html">Learn more.</a> -->
                         </div>
                       </div>
                     </div>
@@ -185,17 +186,17 @@
                     <div class="container-fluid event-listing">
                       <div class="row">
                         <div class="col-md-1">
-                          <img src="http://lorempixel.com/50/50" alt="">
+                          <img class="events-photos" src="./images/events_ron.jpg" alt="">
                         </div>                      
                         <div class="col-md-10 event-info">
-                          <p class="content-header">The Killers</p>
-                          <p class="content-subline">@ The Melting Pot</p>
+                          <p class="content-header">Ron Morabito and Arun</p>
+                          <p class="content-subline">@ Andaz San Diego</p>
                         </div>
                         <div class="col-md-1 listing-date">
                           <div class="listing-date-top">
-                            <p>Monday</p>
+                            <p>Wednesday</p>
                           </div>
-                          <p>12/7</p>
+                          <p>12/17</p>
                         </div>
                       </div>
                     </div>
@@ -210,6 +211,7 @@
                         </div>                      
                         <div class="col-md-10">
                           <p class="content-line">A great concert line-up for all of the jazz fans.</p>
+                          <!-- <a href="./events_ron.html">Learn more.</a> -->
                         </div>
                       </div>
                     </div>
@@ -224,17 +226,17 @@
                     <div class="container-fluid event-listing">
                       <div class="row">
                         <div class="col-md-1">
-                          <img src="http://lorempixel.com/50/50" alt="">
+                          <img class="events-photos" src="./images/events_gilbert.jpg" alt="">
                         </div>                      
                         <div class="col-md-10 event-info">
-                          <p class="content-header">The Killers</p>
-                          <p class="content-subline">@ The Melting Pot</p>
+                          <p class="content-header">Gilbert Castellanos</p>
+                          <p class="content-subline">@ 98 Bottles</p>
                         </div>
                         <div class="col-md-1 listing-date">
                           <div class="listing-date-top">
-                            <p>Monday</p>
+                            <p>Saturday</p>
                           </div>
-                          <p>12/7</p>
+                          <p>12/20</p>
                         </div>
                       </div>
                     </div>
@@ -249,6 +251,7 @@
                         </div>                      
                         <div class="col-md-10">
                           <p class="content-line">A great concert line-up for all of the jazz fans.</p>
+                          <!-- <a href="./events_gilbert.html">Learn more.</a> -->
                         </div>
                       </div>
                     </div>
@@ -263,17 +266,17 @@
                     <div class="container-fluid event-listing">
                       <div class="row">
                         <div class="col-md-1">
-                          <img src="http://lorempixel.com/50/50" alt="">
+                          <img class="events-photos" src="./images/event_nerdynewyear.jpg" alt="">
                         </div>                      
                         <div class="col-md-10 event-info">
-                          <p class="content-header">The Killers</p>
-                          <p class="content-subline">@ The Melting Pot</p>
+                          <p class="content-header">Nerdy New Year</p>
+                          <p class="content-subline">@ 98 Bottles</p>
                         </div>
                         <div class="col-md-1 listing-date">
                           <div class="listing-date-top">
-                            <p>Monday</p>
+                            <p>Wednesday</p>
                           </div>
-                          <p>12/7</p>
+                          <p>12/31</p>
                         </div>
                       </div>
                     </div>
@@ -288,6 +291,7 @@
                         </div>                      
                         <div class="col-md-10">
                           <p class="content-line">A great concert line-up for all of the jazz fans.</p>
+                          <!-- <a href="./events_nerdy.html">Learn more.</a> -->
                         </div>
                       </div>
                     </div>
@@ -299,19 +303,20 @@
         </div>
         <div class="col-md-3 side-bar">
           <!-- Start Calendar  -->
-          <div class="spotlight">
-            <!-- Title -->
-            <h3 class="spotlight-title">Calendar<span class="glyphicon glyphicon-calendar spotlight-glyp" aria-hidden="true"></span></h3>
-            <h4 class="spotlight-subtitle">The Decemberists</h4>
-            <p>Starting on January 11th, The Decemberists broke onto the scene. Frontman Jimmy Whales paired with..</p>
-          </div>
+          <a href="./calendar.html" class="clickable-div">
+            <div class="spotlight">
+              <!-- Title -->
+              <h3 class="spotlight-title">Calendar<span class="glyphicon glyphicon-calendar spotlight-glyp" aria-hidden="true"></span></h3>
+            </div>
+          </a>
           <!-- End Calendar -->
           <!-- Spotlight -->
           <div class="spotlight">
             <!-- Title -->
             <h3 class="spotlight-title">Featured Event<span class="glyphicon glyphicon-glass spotlight-glyp" aria-hidden="true"></span></h3>
-            <h4 class="spotlight-subtitle">The Decemberists</h4>
-            <p>Starting on January 11th, The Decemberists broke onto the scene. Frontman Jimmy Whales paired with..</p>
+            <h4 class="spotlight-subtitle">Nerdy New Year</h4>
+            <p>What do Marty McFly, Dr. Who, Bill &amp; Ted, and YOU have in common? They’re all time travelers, and you’ll be one too at Nerdy New Year 2015! Join San Diego’s most active nerd group as we celebrate zipping into the future at one of San Diego’s most eclectic cocktail and entertainment venues…98 Bottles!</p>
+            <!-- <a href="./events_nerdy.html">Learn more!</a> -->
           </div>
         <!-- End Spotlight -->
         </div>
