--- a/index.html
+++ b/index.html
@@ -136,21 +136,41 @@
                 <h3 class="content-title">Upcoming Events</h3>
               </div>
               <!-- First Event -->
-              <a href="#test1" class="clickable-div">
+              <a href="./events_mike.html" class="clickable-div">
                 <div class="story">
                   <div class="content-paragraph">
-                    <p class="content-header">Black Star Elephant</p>
-                    <p class="content-subline">December 25, 2014 @ North Star</p>                
+                    <p class="content-header">DJ Mike Czech</p>
+                    <p class="content-subline">December 13th, 2014 @ Air Conditioned Lounge</p>                
                   </div>     
                   <div class="clear"></div>
                 </div>
               </a>
               <!-- Second Event -->
-              <a href="#test1" class="clickable-div">
+              <a href="./events_douglas.html" class="clickable-div">
                 <div class="story">
                   <div class="content-paragraph">
-                    <p class="content-header">The Growlers</p>
-                    <p class="content-subline">December 27, 2014 @ Belly Up</p>
+                    <p class="content-header">Douglas Kvandal &amp; Live Jazz Quartet</p>
+                    <p class="content-subline">December 13th, 2014 @ The Amigo Spot</p>
+                  </div>     
+                  <div class="clear"></div>
+                </div>
+              </a>
+              <!-- Third Event -->
+              <a href="./events_matt.html" class="clickable-div">
+                <div class="story">
+                  <div class="content-paragraph">
+                    <p class="content-header">Matt Smith Neu Jazz Trio</p>
+                    <p class="content-subline">December 14th, 2014 @ 98 Bottles</p>
+                  </div>     
+                  <div class="clear"></div>
+                </div>
+              </a>
+              <!-- Fourth Event -->
+              <a href="./events_sharam.html" class="clickable-div">
+                <div class="story">
+                  <div class="content-paragraph">
+                    <p class="content-header">Sunday Social with Sharam</p>
+                    <p class="content-subline">December 14th, 2014 @ 207 Nightclub</p>
                   </div>     
                   <div class="clear"></div>
                 </div>
